# n_minesweeper

./: .gitignore  Cargo.toml  N Mines.csproj  N Mines.sln  export_presets.cfg  icon.svg.import  index.html  project.godot
.github/workflows/: build.yml  rust.yml
GDTIM/: InputManager.gd  InputManager.gd.uid  RawGesture.gd.uid  Util.gd.uid
GDTIM/CustomInputEvents/: InputEventMultiScreenDrag.gd.uid  InputEventMultiScreenLongPress.gd.uid  InputEventMultiScreenSwipe.gd.uid  InputEventMultiScreenTap.gd.uid  InputEventScreenCancel.gd.uid  InputEventScreenPinch.gd.uid  InputEventScreenTwist.gd.uid  InputEventSingleScreenDrag.gd.uid  InputEventSingleScreenLongPress.gd.uid  InputEventSingleScreenSwipe.gd.uid  InputEventSingleScreenTap.gd.uid  InputEventSingleScreenTouch.gd.uid
addons/gs_logger/: appender.gd.uid  layout.gd.uid  logger.gd.uid  message.gd.uid  plugin.gd.uid  utils.gd.uid
addons/gs_logger/appenders/: console_appender.gd.uid  file_appender.gd.uid
addons/gs_logger/layouts/: html_layout.gd.uid  pattern_layout.gd.uid
assets/: difficulty_group.tres
assets/fonts/: FiraSans.ttf.import
assets/textures/: N Mines Assets.pxo  atlas.png.import
assets/themes/: default_theme.tres
scenes/: end.tscn  game.tscn  game_2d.tscn  menu.tscn
scripts/: Game.cs  camera.gd  camera.gd.uid  camera_2d.gd  camera_2d.gd.uid  end.gd  end.gd.uid  game.gd  game.gd.uid  game_2d.gd  game_2d.gd.uid  game_settings.gd  game_settings.gd.uid  menu.gd  menu.gd.uid
shaders/: cell.gdshader  cell.gdshader.uid  cell.tres
src/: achievements.rs  core.rs  lib.rs  main.rs  settings.rs
src/end/: mod.rs  resources.rs  systems.rs
src/game/: components.rs  mod.rs  resources.rs  systems.rs
src/menu/: components.rs  mod.rs  systems.rs
