[package]
name = "n_minesweeper"
version = "0.8.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "wayland",
    "x11",
    "bevy_winit",
    "bevy_asset",
    "bevy_text",
    "bevy_ui",
    "bevy_render",
    "bevy_sprite",
    "default_font",
    "multi-threaded",
    "png"
] }
rand = "0.8.5"
bevy_egui = { version = "0.27.1" }
bevy_ggrs = { version = "0.15.0", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.9", features = ["ggrs"] }

[profile.dev]
debug = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
